packages/taquito-michel-codec/test/contracts_015/ill_typed/comb0.tz
parameter unit;
storage unit;
code { PAIR 0 }
